# ingester

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DOCUMENTATION_EVALUATION.md  DOCUMENTATION_UPDATES.md  Dockerfile  README.md  SECRET_TEST.md  SECRET_TEST2.md  alembic.ini  haiku.rag.yaml  insecure.py  pyproject.toml  trufflehog.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gitleaks.yaml  soliplex.yaml
config/params/: default.yaml  img_desc.yaml  s3_default.yaml  test1.yaml  test2.yaml  test3.yaml  test_base same.yaml  test_base.yaml  test_diff_chunk.yaml  test_missing_chunk.yaml  test_missing_chunk_diff_param.yaml
config/workflows/: batch.yaml  batch_split.yaml  interactive.yaml  test_wf.yaml  test_wf_fail.yaml
docker/: docker-compose.auth.yml  docker-compose.yml
docker/haproxy/: haproxy.cfg
docker/nginx/: locations.conf  nginx-auth.conf
docker/oauth2-proxy/: oauth2-proxy.cfg
docker/pgsql/config/: init.sql
docker/seaweedfs/config/: config.json  init.sh
docs/: API.md  AUTHENTICATION.md  CONFIGURATION.md  DATABASE.md  DOCKER.md  GETTING_STARTED.md  PARAMETER_SETS.md  models.plantuml  process.plantuml
scripts/: README.md  build-ui.bat  build-ui.sh  build_ui-docker.sh
src/soliplex/ingester/: cli.py
src/soliplex/ingester/example/: __init__.py  default_params.yaml  default_wf.yaml
src/soliplex/ingester/lib/: auth.py  config.py  dal.py  docling.py  models.py  operations.py  processing.py  rag.py  workflow.py
src/soliplex/ingester/lib/wf/: operations.py  registry.py  runner.py
src/soliplex/ingester/migrations/: env.py
src/soliplex/ingester/migrations/versions/: 09c196ba9090_init.py  d5523df0d0bc_initial_migration.py  e81dbe94c39d_remove_batch_id_and_rag_id.py  fcb86edb6510_lifecycle_history.py
src/soliplex/ingester/server/: __init__.py
src/soliplex/ingester/server/routes/: batch.py  document.py  lancedb.py  stats.py  sync.py  workflow.py
src/soliplex/ingester/server/static/: index.html
src/soliplex/ingester/server/static/_app/: version.json
src/soliplex/ingester/server/static/_app/immutable/assets/: 0.2699pPaR.css  0.3o2XM3_z.css  0.CfiRCrZT.css  0.CwtK2YEg.css  0.DWybPqAO.css  0.DgfdeHMu.css  app.css
src/soliplex/ingester/server/static/_app/immutable/chunks/: 9jRdBjeo.js  B3CJz9bp.js  B4QU8YnM.js  B5MikgXH.js  B7f9mVOY.js  B887dx_8.js  BBaw3e_0.js  BEaJ_kA6.js  BKpv0ow9.js  BMIiHox4.js  BOAlGdYI.js  BOPdCmyn.js  BOsosYgm.js  BUBcQiJf.js  BVbhH7zi.js  Bf58JmFK.js  BgZ-RO6T.js  BhmCzetO.js  BiStXDTl.js  BibsGK1G.js  Bn-aj5Ad.js  BrMMe1xa.js  BucLHc3f.js  Bx2u9gNR.js  C2Md6CUa.js  C64RYOYL.js  C6WcHDU-.js  C7-U3mvC.js  C8qC475-.js  CBbuBPfZ.js  CBvU0fPL.js  CCxkpujE.js  CKCCttIJ.js  CKbI6y60.js  CKgHXO-0.js  CPjTiP-h.js  CQHdeKum.js  CR8k5L1G.js  CSA-bJZI.js  CSxf4DY1.js  (+77 more)
src/soliplex/ingester/server/static/_app/immutable/entry/: app.B-NX1mBy.js  app.BOFTFO1b.js  app.BrjViILM.js  app.BshO_9Iq.js  app.COcnc0kc.js  app.ChVNtvv5.js  app.CiL4KKQa.js  app.D5QtLkwE.js  app.DiM7Firc.js  app.DoIpZD2P.js  app.IlvDUM-a.js  app.coFpk2ix.js  app.dyjXxGsf.js  app.js  start.AlM1uGPu.js  start.B6VSEvfj.js  start.BRlLvjkx.js  start.BX8V3DFI.js  start.BtZ3Gism.js  start.C1rsaug7.js  start.C8QTmjAa.js  start.CG-GvdDU.js  start.DIZ_M9M6.js  start.DpnHD3Bc.js  start.S4zUeLAj.js  start.Sj682QJg.js  start.ZAscLoPC.js  start.js
src/soliplex/ingester/server/static/_app/immutable/nodes/: 0.B8ZTvwCG.js  0.Ble05lK6.js  0.BxcsBvTy.js  0.CCKk3a-6.js  0.CKUFFR7M.js  0.COAam31h.js  0.CQow1Bke.js  0.CnQmYCRQ.js  0.CsUshvFR.js  0.CzmLO_NN.js  0.D4wTLF5B.js  0.GigJfwv6.js  0.J0BQTAdx.js  0.js  1.BNN0y8gr.js  1.BY9RYvpZ.js  1.Bk5Jdfdv.js  1.C6wgBqQX.js  1.CM7XpLPl.js  1.CMVPHjP9.js  1.CZ6FWUka.js  1.D87Mb82o.js  1.DUaNBg6A.js  1.DlqXSPqV.js  1.IEf3tHit.js  1.jjI_MAlL.js  1.js  1.pzyk6bXh.js  10.ALocfeyY.js  10.BUhBnXgy.js  10.CFMHaWTM.js  10.CID0929k.js  10.C_USc1vN.js  (+115 more)
tests/: conftest.py  factories.py
tests/functional/: test_docling.py  test_server.py  test_workflow.py
tests/unit/: common.py  data.py  test_auth.py  test_config.py  test_dal.py  test_delete_document_uri.py  test_delete_run_group.py  test_documentdb.py  test_endpoint_coverage.py  test_lancedb_routes.py  test_models.py  test_operations.py  test_processing.py  test_rag.py  test_rag_config.py  test_registry.py  test_rungroup.py  test_sql_conversions.py  test_storage.py  test_sync_operations.py  test_sync_routes.py  test_wf_operations.py  test_workflow_config.py  test_workflow_doc_info.py
ui/: .env.example  .gitignore  CLAUDE.md  README.md  README_BUILD.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/scripts/: static-filenames.js
ui/src/lib/components/: BatchCard.svelte  BatchList.svelte  DataTable.svelte  DefinitionCard.svelte  EmptyState.svelte  ErrorMessage.svelte  FilterBar.svelte  JsonViewer.svelte  LanceDBCard.svelte  LanceDBDocumentTable.svelte  LanceDBList.svelte  LifecycleHistoryTimeline.svelte  LoadingSpinner.svelte  Navigation.svelte  PageHeader.svelte  Pagination.svelte  StartWorkflowsForm.svelte  StatsCard.svelte  StatusBadge.svelte  StepTimeline.svelte  Timestamp.svelte  UploadParamSetForm.svelte  WorkflowCard.svelte  WorkflowList.svelte
ui/src/lib/config/: api.ts
ui/src/lib/services/: apiClient.ts
ui/src/lib/types/: api.ts
ui/src/lib/utils/: errors.ts  format.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
ui/src/routes/batches/: +page.svelte  +page.ts
ui/src/routes/batches/[id]/: +page.svelte  +page.ts
ui/src/routes/definitions/params/: +page.svelte  +page.ts
ui/src/routes/definitions/params/[id]/: +page.svelte  +page.ts
ui/src/routes/definitions/workflows/: +page.svelte  +page.ts
ui/src/routes/definitions/workflows/[id]/: +page.svelte  +page.ts
ui/src/routes/lancedb/: +page.svelte  +page.ts
ui/src/routes/lancedb/[...name]/: +page.ts
ui/src/routes/lancedb/[name]/: +page.svelte
ui/src/routes/stats/: +page.svelte  +page.ts
ui/src/routes/workflows/: +page.svelte  +page.ts
ui/src/routes/workflows/[id]/: +page.svelte  +page.ts
